Shorter JavaScript code
Shorter functions

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <h2>Calorías</h2>
         </div>
         <div class="food">
-            <img class="food-image" src="https://images.vexels.com/media/users/3/152411/isolated/preview/4a22d435331dde73ae0f1cebbdbaacff-double-burger-icon-by-vexels.png">
-            <img class="food-image" src="https://www.pngrepo.com/download/19372/soda.png">
-            <img class="food-image" src="https://image.flaticon.com/icons/png/512/284/284758.png">
-            <img class="food-image" src="https://b.kisscc0.com/20180816/eoe/kisscc0-pizza-pizza-computer-icons-cheese-food-pizza-slice-5b75418a8d5fd9.1105725115344111465791.png">
+            <img class="food-image" data-hamburger="563" src="https://images.vexels.com/media/users/3/152411/isolated/preview/4a22d435331dde73ae0f1cebbdbaacff-double-burger-icon-by-vexels.png">
+            <img class="food-image" data-soda="138" src="https://www.pngrepo.com/download/19372/soda.png">
+            <img class="food-image" data-pizza="285" src="https://image.flaticon.com/icons/png/512/284/284758.png">
+            <img class="food-image" data-ice-cream="111" src="https://b.kisscc0.com/20180816/eoe/kisscc0-pizza-pizza-computer-icons-cheese-food-pizza-slice-5b75418a8d5fd9.1105725115344111465791.png">
         </div>
     </main>
         <script src="script.js"></script>
